package nasa.model.activity;

import java.time.LocalDateTime;

/**
 * Abstract class to specify fields with getter and setters for activities.
 */
public abstract class Activity {

    private Name name;

    private NASA.model.activity.Date date;

    private NASA.model.activity.Note note;

    private boolean isDone;

    private NASA.model.activity.Status status;

    private NASA.model.activity.Priority priority;

    /**
     * Constructs a {@code activity}
     * @param name name of activity
     * @param date date of the activity
     * @param note note of the activity
     */
    public Activity(Name name, Date date, Note note) {
        this.name = name;
        this.date = date;
        this.note = note;
        this.isDone = false;
        this.status = Status.ONGOING;
    }

    //Priority priority;

    /**
     * Retrieve the name of the activity.
     * @return String name
     */
    public NASA.model.activity.Name getName() {
        return name;
    }

    /**
     * Sets the activity name to a new name.
     * Used for editing activities.
     * @param name of the activity
     */
    public void setName(NASA.model.activity.Name name) {
        this.name = name;
    }

    /**
     * Retrieve the date of the activity.
     * @return Date object representing when it is going to occur
     */
    public NASA.model.activity.Date getDate() {
        return date;
    }

    /**
     * Sets the date of the activity to a new date.
     * Used for editing activities.
     * @param date of the activity
     */
    public void setDate(NASA.model.activity.Date date) {
        this.date = date;
    }

    /**
     * Retrieve the note object of the activity.
     * @return Note of the activity
     */
    public Note getNote() {
        return note;
    }

    /**
     * Sets the note of the activity to a new one.
     * Used for editing activities.
     * @param note of the activity
     */
    public void setNote(Note note) {
        this.note = note;
    }

    /**
     * Returns true if both activities of the same name, note and date.
     * @param otherActivity
     * @return
     */
    public boolean isSameActivity(Activity otherActivity) {
        if (otherActivity == this) {
            return true;
        }

        return otherActivity != null
                && otherActivity.getName().equals(getName())
                && otherActivity.getNote().equals(getNote())
                && otherActivity.getDate().equals(getDate());
    }

    /**
     * Returns true if both activities have the same identity and data fields.
     * This defines a stronger notion of equality between two activities.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        if (!(other instanceof Activity)) {
            return false;
        }

        Activity otherActivity = (Activity) other;
        return otherActivity.getName().equals(getName())
                && otherActivity.getNote().equals(getNote())
                && otherActivity.getDate().equals(getDate());
    }

    public void updateStatus() {
        if (status == NASA.model.activity.Status.ONGOING && LocalDateTime.now().isAfter(date.getDate())) {
            status = NASA.model.activity.Status.LATE;
        }
    }

    /**
     * Retrieve the late status of the activity
     * @return boolean, true means late, false means not
     */
    public boolean isLate() {
        return status == NASA.model.activity.Status.LATE;
    }

    /**
     * Sets the task to done.
     */
    public void setDone() {
        status = Status.DONE;
    }

    /**
     * Retrieve the done status of the activity.
     * @return boolean, true means done, false means not
     */
    public boolean isDone() {
        return status == Status.DONE;
    }

    public Priority getPriority() {
        return priority;
    }

    public void setPriority(Priority priority) {
        this.priority = priority;
    }
}
